--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "commitizen": "^4.0.3",
     "core-js": "^2.6.5",
     "element-ui": "^2.8.2",
     "jquery": "^3.4.1",
@@ -25,6 +26,7 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-component": "^1.1.1",
     "copy-webpack-plugin": "^4.6.0",
+    "cz-conventional-changelog": "^3.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.18.0",
@@ -32,5 +34,10 @@
     "vue-cli-plugin-chrome-ext": "^0.0.5",
     "vue-template-compiler": "^2.6.10",
     "zip-webpack-plugin": "^3.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
