--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "dev": "vue-cli-service build-watch"
+    "dev": "vue-cli-service build-watch",
+    "fix": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "commitizen": "^4.0.3",
     "core-js": "^2.6.5",
-    "element-ui": "^2.8.2",
+    "element-ui": "^2.12.0",
     "jquery": "^3.4.1",
     "url": "^0.11.0",
     "vue": "^2.6.10",
