--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "fix": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
+    "ali-oss": "^6.1.1",
     "axios": "^0.18.0",
     "commitizen": "^4.0.3",
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
+    "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.4.1",
     "url": "^0.11.0",
     "vue": "^2.6.10",
