--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "commitizen": "^4.0.3",
     "core-js": "^2.6.5",
+    "crypto-js": "^3.1.9-1",
     "element-ui": "^2.12.0",
     "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.4.1",
