--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "element-ui": "^2.12.0",
     "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.4.1",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "url": "^0.11.0",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
@@ -33,8 +35,8 @@
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.18.0",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.23.3",
+    "sass-loader": "^7.3.1",
     "vue-cli-plugin-chrome-ext": "^0.0.5",
     "vue-template-compiler": "^2.6.10",
     "zip-webpack-plugin": "^3.0.0"
